aws/projects/002-milliseconds-converter/cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  The Milliseconds Converter Application aims to convert the given time in milliseconds into hours, minutes, and seconds. The application is to be coded in Python and deployed as a web application with Flask on AWS Application Load Balancer with Auto Scaling Group of Elastic Compute Cloud (EC2) Instances using AWS Cloudformation Service.
Parameters:
  
Mappings:
  
Conditions:
  
Resources:
  
  MiliAutoScalingPol:
    Type: "AWS::AutoScaling::ScalingPolicy"
    Properties:
      AdjustmentType: String
      AutoScalingGroupName: COME BACK
      #Cooldown: String
      #EstimatedInstanceWarmup: Integer
      #MetricAggregationType: String
      #MinAdjustmentMagnitude: Integer
      PolicyType: TargetTrackingScaling
      #ScalingAdjustment: Integer
      #StepAdjustments:
      # - StepAdjustment
      TargetTrackingConfiguration:
        TargetTrackingConfiguration
  
  
  MiliLoadBalancer:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      #IpAddressType: String
      #LoadBalancerAttributes:
      #  - LoadBalancerAttribute
      SecurityGroups:
        - !GetAtt MiliSecGrp.GroupId
      #SubnetMappings:
      #  - SubnetMapping
      Subnets:
        - COME BACK
      #Tags:
      #  - Tag
      #Type: String
  
  
  MiliListener:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      #AlpnPolicy:
      #  - String
      #Certificates:
      #  - Certificate
      DefaultActions: #required
        - Type: forward
          TargetGroupArn: !Ref MiliTargetGrp
      LoadBalancerArn: !Ref MiliLoadBalancer
      Port: 80
      Protocol: HTTP
      #SslPolicy: String
  

  MiliTargetGrp:
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      HealthCheckIntervalSeconds: 25
      #HealthCheckPath: String
      #HealthCheckPort: String
      #HealthCheckProtocol: String
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      #Name: String
      Port: 80
      Protocol: HTTP
      Tags:
        - Tag
      #TargetGroupAttributes:
      #  - TargetGroupAttribute
      #TargetType: String
      #Targets:
      #  - TargetDescription
      UnhealthyThresholdCount: 3
      VpcId: COME BACK
  
  
  MiliSecGrp:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: enables SSH and HTTP #required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0


      Tags:
        - Tag
        
Outputs:
